--- a/index.html
+++ b/index.html
@@ -113,25 +113,38 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- ============================ Off-canvas navigation =========================== -->
-
+    
     <div class="sb-slidebar sb-right sb-style-overlay sb-momentum-scrolling">
         <div class="sb-close" aria-label="Close Menu" aria-hidden="true">
-            <img src="img/global/close.png" alt="Close"/>
+            <img src="img/global/close.png" alt="Close" />
         </div>
         <!-- Lists in Slidebars -->
         <ul class="sb-menu">
-            <li><a href="index.html" class="animsition-link" title="Start">Start</a></li>
-            <li><a href="company.html" class="animsition-link" title="Company">Company</a></li>
-            <li><a href="services.html" class="animsition-link" title="Services">Services</a></li>
-            <li><a href="careers.html" class="animsition-link" title="Careers">Careers</a></li>
-            <li><a href="work.html" class="animsition-link" title="Work">Work</a></li>
-            <li><a href="proposal.html" class="animsition-link" title="Start a Project">Start a Project</a></li>
-            <li><a href="contact.html" class="animsition-link" title="Contact Us">Contact Us</a></li>
-        </ul>
+            <li>
+                <a href="index.html" class="animsition-link" title="Home">Home</a>
+            </li>
+            <li>
+                <a href="company.html" class="animsition-link" title="Company">Company</a>
+            </li>
+            <li>
+                <a href="services.html" class="animsition-link" title="Services">Services</a>
+            </li>
+            <li>
+                <a href="careers.html" class="animsition-link" title="Careers">Careers</a>
+            </li>
+            <li>
+                <a href="work.html" class="animsition-link" title="Work">Work</a>
+            </li>
+            <li>
+                <a href="proposal.html" class="animsition-link" title="Start a Project">Start a Project</a>
+            </li>
+            <li>
+                <a href="contact.html" class="animsition-link" title="Contact Us">Contact Us</a>
+            </li>
         </ul>
     </div>
-
-    <!-- ============================ Off-canvas navigation =========================== -->
+    
+    <!-- ============================ END Off-canvas navigation =========================== -->
 
     <!-- ============================ #sb-site Main Page Wrapper =========================== -->
 
