--- a/careers.html
+++ b/careers.html
@@ -100,7 +100,7 @@
 <body id="values" class="lightnav animsition">
 
     <!-- ============================ Off-canvas navigation =========================== -->
-
+    
     <div class="sb-slidebar sb-right sb-style-overlay sb-momentum-scrolling">
         <div class="sb-close" aria-label="Close Menu" aria-hidden="true">
             <img src="img/global/close.png" alt="Close" />
@@ -108,7 +108,7 @@
         <!-- Lists in Slidebars -->
         <ul class="sb-menu">
             <li>
-                <a href="index.html" class="animsition-link" title="Start">Start</a>
+                <a href="index.html" class="animsition-link" title="Home">Home</a>
             </li>
             <li>
                 <a href="company.html" class="animsition-link" title="Company">Company</a>
@@ -130,7 +130,7 @@
             </li>
         </ul>
     </div>
-
+    
     <!-- ============================ END Off-canvas navigation =========================== -->
 
     <!-- ============================ #sb-site Main Page Wrapper =========================== -->
