--- a/proposal.html
+++ b/proposal.html
@@ -122,7 +122,7 @@
         </div>
         <!-- Lists in Slidebars -->
         <ul class="sb-menu">
-            <li><a href="index.html" class="animsition-link" title="Start">Start</a></li>
+            <li><a href="index.html" class="animsition-link" title="Home">Home</a></li>
             <li><a href="company.html" class="animsition-link" title="Company">Company</a></li>
             <li><a href="services.html" class="animsition-link" title="Services">Services</a></li>
             <li><a href="careers.html" class="animsition-link" title="Careers">Careers</a></li>
@@ -193,10 +193,6 @@
                         <div class="typeform-widget" data-url="https://mark1060.typeform.com/to/WhjwPl" data-transparency="50" data-hide-headers=true
                             data-hide-footer=true style="width: 100%; height: 500px;"> </div>
                         <script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() </script>
-                        <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by
-                            <a href="https://www.typeform.com//?utm_campaign=WhjwPl&amp;utm_source=typeform.com-11233981-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-poweredbytypeform&amp;utm_term=EN"
-                                style="color: #999" target="_blank">Typeform</a>
-                        </div>
                     </div>
                     <div class="col-md-8 emailform">
                         <!-- <form name="sentMessage" class="well" id="contactForm"  novalidate>
