--- a/team.html
+++ b/team.html
@@ -122,7 +122,7 @@
         </div>
         <!-- Lists in Slidebars -->
         <ul class="sb-menu">
-            <li><a href="index.html" class="animsition-link" title="Start">Start</a></li>
+            <li><a href="index.html" class="animsition-link" title="Home">Home</a></li>
             <li><a href="company.html" class="animsition-link" title="Company">Company</a></li>
             <li><a href="services.html" class="animsition-link" title="Services">Services</a></li>
             <li><a href="careers.html" class="animsition-link" title="Careers">Careers</a></li>
