--- a/contact.html
+++ b/contact.html
@@ -202,10 +202,12 @@
                 <div class="col-sm-12 col-md-12 col-lg-10 col-lg-offset-1">
                     <div class="titleblock text-center">
                         <i class="icon-basic-message"></i>
-                        <h2>Have something to say?</h2>
+                        <h2>Have something you want to inquire about?</h2>
                         <p>Don't worry, we've got you covered. Simply fill out the email form below and we'll be in touch.</p>
                     </div>
                     <div class="col-md-12">
+                        <div class="typeform-widget" data-url="https://mark1060.typeform.com/to/HnxPLx" style="width: 100%; height: 500px;"> </div>
+                        <script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() </script>
                         <hr>
                     </div>
                     <div class="col-md-4 offices">
