--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <meta charset="utf-8">
 
     <!-- Page Title, (write properly for SEO) -->
-    <title>Contact | Mach Seven Media - WEBSITE DESIGN, BRAND STRATEGY & DIGITAL MARKETING With Stunning Results</title>
+    <title>Contact | Mach Seven Media - WEBSITE DESIGN, BRAND STRATEGY & DIGITAL MARKETING Stunning Results</title>
 
     <!-- Meta viewport & behaviour -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
