Added new google metatag for GSuite verification

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
 <!--<![endif]-->
 <head>
+<meta name="google-site-verification" content="S9YwKMlnqrdRJdKbTl9Ccq2zqkvgV_-NN8XnfYyhJ_M" />
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({
